form/src/tests/derive/unimplemented_compound.stderr
error[E0277]: the trait bound `Child: form::Form` is not satisfied
  --> $DIR/unimplemented_compound.rs:18:10
   |
18 | #[derive(Form)]
   |          ^^^^ the trait `form::Form` is not implemented for `Child`
   |
   = help: see issue #48214
